docs/api/qiskit/0.35/qiskit.transpiler.passes.InstructionDurationCheck.mdx
---
title: InstructionDurationCheck (v0.35)
description: API reference for qiskit.transpiler.passes.InstructionDurationCheck in qiskit v0.35
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.InstructionDurationCheck
---

# InstructionDurationCheck

<Class id="qiskit.transpiler.passes.InstructionDurationCheck" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.20/qiskit/transpiler/passes/scheduling/alignments/check_durations.py" signature="InstructionDurationCheck(acquire_alignment=1, pulse_alignment=1)" modifiers="class">
  Bases: `qiskit.transpiler.basepasses.AnalysisPass`

  Duration validation pass for reschedule.

  This pass investigates the input quantum circuit and checks if the circuit requres rescheduling for execution. Note that this pass can be triggered without scheduling. This pass only checks the duration of delay instructions and user defined pulse gates, which report duration values without pre-scheduling.

  This pass assumes backend supported instructions, i.e. basis gates, have no violation of the hardware alignment constraints, which is true in general.

  Create new duration validation pass.

  The alignment values depend on the control electronics of your quantum processor.

  **Parameters**

  *   **acquire\_alignment** (`int`) – Integer number representing the minimum time resolution to trigger acquisition instruction in units of `dt`.
  *   **pulse\_alignment** (`int`) – Integer number representing the minimum time resolution to trigger gate instruction in units of `dt`.

  ## Methods

  <span id="qiskit-transpiler-passes-instructiondurationcheck-name" />

  ### name

  <Function id="qiskit.transpiler.passes.InstructionDurationCheck.name" signature="InstructionDurationCheck.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-instructiondurationcheck-run" />

  ### run

  <Function id="qiskit.transpiler.passes.InstructionDurationCheck.run" signature="InstructionDurationCheck.run(dag)">
    Run duration validation passes.

    **Parameters**

    **dag** (`DAGCircuit`) – DAG circuit to check instruction durations.
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.InstructionDurationCheck.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.InstructionDurationCheck.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

